--- a/index.html
+++ b/index.html
@@ -5,12 +5,67 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hero Tavel</title>
+  <!-- mulish font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
+    rel="stylesheet">
+  <!-- end -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet" href="./Style/style.css">
   <link rel="stylesheet" href="./Style/responsive.css">
 </head>
 
 <body>
-  <h1>Helo world</h1>
+  <header>
+    <div class="logo">
+      <img src="Images/logo.png" alt="">
+      <h1 class="logo_title">Hero <span>Travel </span></h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#" class="fast_child">Home</a></li>
+        <li><a href="#">Packages</a></li>
+        <li><a href="#">Testimonial</a></li>
+        <li><a href="#">Blog</a></li>
+        <i class="fa-solid fa-bars"></i>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <!-- banner arae -->
+    <section class="banner_area">
+      <div class="banner_container">
+        <h1>Explore Your Travel</h1>
+        <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis
+          sapien
+          urna eu
+          phasellus.</p>
+
+        <div class="input_container">
+          <form action="">
+            <input type="text" placeholder="Where go">
+            <select>
+              <option value="">When</option>
+            </select>
+            <select>
+              <option value="">Select Type</option>
+            </select>
+            <button class="btn"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- Our Popular Tours area -->
+    <section class="Popular_section">
+
+    </section>
+  </main>
+  <footer></footer>
 </body>
 
 </html>
