banner section style and reponsive

--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
       <div class="banner_container">
         <h1>Explore Your Travel</h1>
         <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis
-          sapien
-          urna eu
-          phasellus.</p>
-
+          sapien urna eu phas ellus.</p>
         <div class="input_container">
           <form action="">
             <input type="text" placeholder="Where go">
@@ -62,7 +59,35 @@
     </section>
     <!-- Our Popular Tours area -->
     <section class="Popular_section">
-
+      <div class="populer_container">
+        <h2>Our Popular Tours</h2>
+        <p class="first_para">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales
+          dictumst nec nibh
+          pellentesque.</p>
+        <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna <br> nullam odio neque diam. Sociis erat at .
+        </li>
+        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea <br> porta lacus. Lectus suspendisse
+          nullam.
+        </li>
+        <li>Accumsan eget et turpis praesent lorem egestas enim elit <br> bibendum. Risus at in.</li>
+        <p class="last_para">Amet consectetur. Vulputate commodo felis molestie risus
+          ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque
+          aliquet. Id
+          bibendum nunc senectus semper tincidunt.</p>
+        <button class="populer_btn">Read More</button>
+      </div>
+      <div class="populer_img">
+        <img src="Images/Rectangle 4.png" alt="">
+      </div>
+    </section>
+    <!-- Destination section -->
+    <section class="destination_section_area">
+      <div class="destination_container">
+        <h2>Choose Your Destination</h2>
+        <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec
+          nibh
+          pellentesque.</p>
+      </div>
     </section>
   </main>
   <footer></footer>
