--- a/index.html
+++ b/index.html
@@ -88,6 +88,79 @@
           nibh
           pellentesque.</p>
       </div>
+      <div class="destination_img_container">
+        <div class="img_1">
+          <img src="Images/Rectangle 5.png" alt="">
+          <h2 class="subtitle_name_1">Maldives</h2>
+        </div>
+        <div class="img_2">
+          <img src="Images/Rectangle 8.png" alt="">
+          <h2 class="subtitle_name_2">Indonesia</h2>
+        </div>
+      </div>
+      <div class="destination_img_container_2">
+        <div class="img_3">
+          <img src="Images/Rectangle 6.png" alt="">
+          <h2 class="subtitle_name_3">Srilanka</h2>
+        </div>
+        <div class="img_4">
+          <img src="Images/Rectangle 7.png" alt="">
+          <h2 class="subtitle_name_4">North America</h2>
+        </div>
+        <div class="img_5">
+          <img src="Images/Rectangle 9.png" alt="">
+          <h2 class="subtitle_name_5">Kashmir</h2>
+        </div>
+      </div>
+      <div class="destination_img_container_3">
+        <div class="img_6">
+          <img src="Images/Rectangle 11.png" alt="">
+          <h2 class="subtitle_name_6">Bangladesh</h2>
+        </div>
+        <div class="img_7">
+          <img src="Images/Rectangle 10.png" alt="">
+          <h2 class="subtitle_name_7">Bandarban</h2>
+        </div>
+      </div>
+    </section>
+    <!-- why Choose us section -->
+    <section class="Choose_us_section">
+      <div class="choose_us_container">
+        <h2>Why Choose Us </h2>
+        <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec
+          nibh
+          pellentesque.</p>
+      </div>
+      <div class="card_container">
+        <div class="Hotel_card">
+          <div class="child_card">
+            <img src="Images/hotels.png" alt="">
+            <h3>Handpicked Hotels</h3>
+            <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis
+              dignissim
+              adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+          </div>
+        </div>
+        <div class="servise_card">
+          <div class="child_card"><img src="Images/map.png" alt="">
+            <h3>World Class Service</h3>
+            <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis
+              dignissim
+              adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+          </div>
+        </div>
+      </div>
+      <div class="Price_Guarantee_container">
+        <div class="price_card">
+          <div class="child_card">
+            <img src="Images/discount.png" alt="">
+            <h3>Best Price Guarantee</h3>
+            <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis
+              dignissim
+              adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   <footer></footer>
