book now section style

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
     rel="stylesheet">
   <!-- end -->
+  <!-- font-awsome cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- font-awsome cdn -->
+  <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
   <link rel="stylesheet" href="./Style/style.css">
   <link rel="stylesheet" href="./Style/responsive.css">
@@ -161,6 +165,71 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- Deals & Discounts section -->
+    <section class="Deals_Discounts_section">
+      <div class="deal_discount_container">
+        <h3>Deals & Discounts section</h3>
+        <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec
+          nibh
+          pellentesque.</p>
+      </div>
+      <div class="deal_card_1">
+        <img src="Images/Group 39.png" alt="">
+        <div class="book_now">
+          <div class="child_book_now">
+            <p><i class='bx bxs-time'></i> 7 Day / 7 Night</p>
+            <p><i class='bx bxs-user-badge'></i> Max: 10</p>
+            <p><i class='bx bxs-map'></i> Malaysia</p>
+          </div>
+          <div class="book_title">
+            <h3>Tour To Satorini</h3>
+            <p>Amet consectetur. Vulputate commodo felis <br>
+              molestie risus ornare nulla amet et. Libero commodo sagittis <br> dignissim adipiscing quis. Habitant
+              adipiscing.</p>
+            <h2>Price: $1300-$1500</h2>
+            <button class="btn" id="book_btn">Book Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="deal_card_1">
+        <img src="Images/Group 40.png" alt="">
+        <div class="book_now book_now_2">
+          <div class="child_book_now">
+            <p><i class='bx bxs-time'></i> 7 Day / 7 Night</p>
+            <p><i class='bx bxs-user-badge'></i> Max: 10</p>
+            <p><i class='bx bxs-map'></i> Malaysia</p>
+          </div>
+          <div class="book_title">
+            <h3>Tour To Satorini</h3>
+            <p>Amet consectetur. Vulputate commodo felis <br>
+              molestie risus ornare nulla amet et. Libero commodo sagittis <br> dignissim adipiscing quis. Habitant
+              adipiscing.</p>
+            <h2>Price: $1300-$1500</h2>
+            <button class="btn" id="book_btn">Book Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="deal_card_1">
+        <img src="Images/Group 39.png" alt="">
+        <div class="book_now">
+          <div class="child_book_now">
+            <p><i class='bx bxs-time'></i> 7 Day / 7 Night</p>
+            <p><i class='bx bxs-user-badge'></i> Max: 10</p>
+            <p><i class='bx bxs-map'></i> Malaysia</p>
+          </div>
+          <div class="book_title">
+            <h3>Tour To Satorini</h3>
+            <p>Amet consectetur. Vulputate commodo felis <br>
+              molestie risus ornare nulla amet et. Libero commodo sagittis <br> dignissim adipiscing quis. Habitant
+              adipiscing.</p>
+            <h2>Price: $1300-$1500</h2>
+            <button class="btn" id="book_btn">Book Now</button>
+          </div>
+        </div>
+      </div>
+
     </section>
   </main>
   <footer></footer>
