news section style and small device reponsive done

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <div class="book_title">
             <h3>Tour To Satorini</h3>
             <p>Amet consectetur. Vulputate commodo felis <br>
-              molestie risus ornare nulla amet et. Libero commodo sagittis <br> dignissim adipiscing quis. Habitant
+              molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
               adipiscing.</p>
             <h2>Price: $1300-$1500</h2>
             <button class="btn" id="book_btn">Book Now</button>
@@ -204,7 +204,7 @@
           <div class="book_title">
             <h3>Tour To Satorini</h3>
             <p>Amet consectetur. Vulputate commodo felis <br>
-              molestie risus ornare nulla amet et. Libero commodo sagittis <br> dignissim adipiscing quis. Habitant
+              molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
               adipiscing.</p>
             <h2>Price: $1300-$1500</h2>
             <button class="btn" id="book_btn">Book Now</button>
@@ -222,14 +222,52 @@
           <div class="book_title">
             <h3>Tour To Satorini</h3>
             <p>Amet consectetur. Vulputate commodo felis <br>
-              molestie risus ornare nulla amet et. Libero commodo sagittis <br> dignissim adipiscing quis. Habitant
+              molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
               adipiscing.</p>
             <h2>Price: $1300-$1500</h2>
             <button class="btn" id="book_btn">Book Now</button>
           </div>
         </div>
       </div>
-
+      <button class="btn" id="Packages_btn">See All Packages</button>
+    </section>
+    <!-- Perfect Place section -->
+    <section class="Place_section">
+      <div class="place_text_container">
+        <h2>A Simple Perfect Place <br> To Get Lost</h2>
+        <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla <br> amet et. Libero commodo sagittis
+          dignissim
+          adipiscing quis.</p>
+        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae <br> platea porta lacus. Lectus suspendisse
+          nullam.</li>
+        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae <br> platea porta lacus. Lectus suspendisse
+          nullam.</li>
+        <button class="btn" id="book_btn">See More</button>
+      </div>
+      <div class="place_img_container">
+        <img src="Images/bd-mountain.png" alt="">
+      </div>
+    </section>
+    <!-- Newsletter section -->
+    <section class="Newsletter_section">
+      <div class="news_container">
+        <h4>Newsletter</h4>
+        <p>Get your daily dose of travel news & tips. Sign up today!</p>
+        <form action="">
+          <input type="text" placeholder="Enter your name">
+          <input type="text" placeholder="Enter your name">
+        </form>
+        <button class="btn" id="news_btn">Subscribe</button>
+      </div>
+      <div class="news_img_container">
+        <img src="Images/Rectangle 8 (1).png" alt="">
+        <div class="Token_card">
+          <div class="Token_child_card">
+            <p>Travel.com</p>
+            <h2>Save up to 70%</h2>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   <footer></footer>
