footer section add and small device responsive done

--- a/index.html
+++ b/index.html
@@ -48,16 +48,14 @@
         <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis
           sapien urna eu phas ellus.</p>
         <div class="input_container">
-          <form action="">
-            <input type="text" placeholder="Where go">
-            <select>
-              <option value="">When</option>
-            </select>
-            <select>
-              <option value="">Select Type</option>
-            </select>
-            <button class="btn"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
-          </form>
+          <input type="text" placeholder="Where go">
+          <select>
+            <option value="">When</option>
+          </select>
+          <select>
+            <option value="">Select Type</option>
+          </select>
+          <button class="btn"><i class='bx bx-search-alt-2'></i> Find Now</button>
         </div>
       </div>
     </section>
@@ -270,7 +268,24 @@
       </div>
     </section>
   </main>
-  <footer></footer>
+  <footer class="footer_section">
+    <div class="footer_logo">
+      <img src="Images/logo.png" alt="">
+      <h3>Hero <span>Travel</span></h3>
+    </div>
+    <p class="footer_discription">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci
+      potenti vulputate. Leo <br>
+      erat maecenas
+      vitae elementum ultricies nullam.</p>
+    <div class="footer_icon">
+      <i class='bx bxl-twitter'></i>
+      <i class='bx bxl-facebook'></i>
+      <i class='bx bxl-instagram'></i>
+      <i class='bx bxl-github'></i>
+    </div>
+    <hr class="line_brack">
+    <p class="last_description">2017, All Rights Reserved.</p>
+  </footer>
 </body>
 
 </html>
