--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="Images/logo.png" alt="">
+      <img src="images/logo.png" alt="">
       <h1 class="logo_title">Hero <span>Travel </span></h1>
     </div>
     <nav>
@@ -79,7 +79,7 @@
         <button class="populer_btn">Read More</button>
       </div>
       <div class="populer_img">
-        <img src="Images/Rectangle 4.png" alt="">
+        <img src="images/Rectangle 4.png" alt="">
       </div>
     </section>
     <!-- Destination section -->
@@ -92,35 +92,35 @@
       </div>
       <div class="destination_img_container">
         <div class="img_1">
-          <img src="Images/Rectangle 5.png" alt="">
+          <img src="images/Rectangle 5.png" alt="">
           <h2 class="subtitle_name_1">Maldives</h2>
         </div>
         <div class="img_2">
-          <img src="Images/Rectangle 8.png" alt="">
+          <img src="images/Rectangle 8.png" alt="">
           <h2 class="subtitle_name_2">Indonesia</h2>
         </div>
       </div>
       <div class="destination_img_container_2">
         <div class="img_3">
-          <img src="Images/Rectangle 6.png" alt="">
+          <img src="images/Rectangle 6.png" alt="">
           <h2 class="subtitle_name_3">Srilanka</h2>
         </div>
         <div class="img_4">
-          <img src="Images/Rectangle 7.png" alt="">
+          <img src="images/Rectangle 7.png" alt="">
           <h2 class="subtitle_name_4">North America</h2>
         </div>
         <div class="img_5">
-          <img src="Images/Rectangle 9.png" alt="">
+          <img src="images/Rectangle 9.png" alt="">
           <h2 class="subtitle_name_5">Kashmir</h2>
         </div>
       </div>
       <div class="destination_img_container_3">
         <div class="img_6">
-          <img src="Images/Rectangle 11.png" alt="">
+          <img src="images/Rectangle 11.png" alt="">
           <h2 class="subtitle_name_6">Bangladesh</h2>
         </div>
         <div class="img_7">
-          <img src="Images/Rectangle 10.png" alt="">
+          <img src="images/Rectangle 10.png" alt="">
           <h2 class="subtitle_name_7">Bandarban</h2>
         </div>
       </div>
@@ -136,7 +136,7 @@
       <div class="card_container">
         <div class="Hotel_card">
           <div class="child_card">
-            <img src="Images/hotels.png" alt="">
+            <img src="images/hotels.png" alt="">
             <h3>Handpicked Hotels</h3>
             <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis
               dignissim
@@ -155,7 +155,7 @@
       <div class="Price_Guarantee_container">
         <div class="price_card">
           <div class="child_card">
-            <img src="Images/discount.png" alt="">
+            <img src="images/discount.png" alt="">
             <h3>Best Price Guarantee</h3>
             <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis
               dignissim
@@ -174,7 +174,7 @@
           pellentesque.</p>
       </div>
       <div class="deal_card_1">
-        <img src="Images/Group 39.png" alt="">
+        <img src="images/Group 39.png" alt="">
         <div class="book_now">
           <div class="child_book_now">
             <p><i class='bx bxs-time'></i> 7 Day / 7 Night</p>
@@ -192,7 +192,7 @@
         </div>
       </div>
       <div class="deal_card_1">
-        <img src="Images/Group 40.png" alt="">
+        <img src="images/Group 40.png" alt="">
         <div class="book_now book_now_2">
           <div class="child_book_now">
             <p><i class='bx bxs-time'></i> 7 Day / 7 Night</p>
@@ -210,7 +210,7 @@
         </div>
       </div>
       <div class="deal_card_1">
-        <img src="Images/Group 39.png" alt="">
+        <img src="images/Group 39.png" alt="">
         <div class="book_now">
           <div class="child_book_now">
             <p><i class='bx bxs-time'></i> 7 Day / 7 Night</p>
@@ -243,7 +243,7 @@
         <button class="btn" id="book_btn">See More</button>
       </div>
       <div class="place_img_container">
-        <img src="Images/bd-mountain.png" alt="">
+        <img src="images/bd-mountain.png" alt="">
       </div>
     </section>
     <!-- Newsletter section -->
@@ -258,7 +258,7 @@
         <button class="btn" id="news_btn">Subscribe</button>
       </div>
       <div class="news_img_container">
-        <img src="Images/Rectangle 8 (1).png" alt="">
+        <img src="images/Rectangle 8 (1).png" alt="">
         <div class="Token_card">
           <div class="Token_child_card">
             <p>Travel.com</p>
@@ -270,7 +270,7 @@
   </main>
   <footer class="footer_section">
     <div class="footer_logo">
-      <img src="Images/logo.png" alt="">
+      <img src="images/logo.png" alt="">
       <h3>Hero <span>Travel</span></h3>
     </div>
     <p class="footer_discription">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci
