--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </div>
       <div class="destination_img_container_2">
         <div class="img_3">
-          <img src="images/Rectangle 6.png" alt="">
+          <img src="Images/Rectangle 6.png" alt="">
           <h2 class="subtitle_name_3">Srilanka</h2>
         </div>
         <div class="img_4">
